opam-version: "2.0"
maintainer: "Gabriel Radanne <drupyog@zoho.com>"
synopsis: "Bindings for LMDB, a fast in-file database with ACID transactions"
authors: "Gabriel Radanne <drupyog@zoho.com>"
license: "MIT"
homepage: "https://github.com/Drup/ocaml-lmdb"
bug-reports: "https://github.com/Drup/ocaml-lmdb/issues"
dev-repo: "git+https://github.com/Drup/ocaml-lmdb.git"
doc: "https://drup.github.io/ocaml-lmdb/dev/Lmdb.html"
tags: [ "clib:lmdb" "database" ]
build: [
  ["ocaml" "setup.ml" "-configure" "--prefix" prefix]
  ["ocaml" "setup.ml" "-build"]
  ["ocaml" "setup.ml" "-test"] {with-test}
  ["ocaml" "setup.ml" "-doc"] {with-doc}
]
install: ["ocaml" "setup.ml" "-install"]
remove: ["ocamlfind" "remove" "lmdb"]
depends: [
  "base-bytes"
  "bigstringaf"
  "ctypes"
  "ctypes-foreign"
  "unix-type-representations"
  "ocamlfind" {build}
  "benchmark" {with-test}

  "oasis" {dev & build}
]

depexts: [
  ["liblmdb-dev"] {os-distribution = "debian"}
  ["liblmdb-dev"] {os-distribution = "ubuntu"}
  ["lmdb"] {os = "macos" & os-distribution = "homebrew"}
  ["lmdb"] {os = "macos" & os-distribution = "macports"}
  ["lmdb-devel"] {os-distribution = "centos"}
  ["lmdb-devel"] {os-distribution = "fedora"}
  ["lmdb-devel"] {os-distribution = "opensuse"}
  ["lmdb"] {os-distribution = "alpine"}
  ["lmdb"] {os-distribution = "archlinux"}
]
