opam-version: "2.0"
maintainer: "Gabriel Radanne <drupyog@zoho.com>"
synopsis: "Bindings for LMDB, a fast in-file database with ACID transactions"
authors: [
  "Gabriel Radanne <drupyog@zoho.com>"
  "Christopher Zimmermann <christopher@gmerlin.de>"
]
license: "MIT"
homepage: "https://github.com/Drup/ocaml-lmdb"
bug-reports: "https://github.com/Drup/ocaml-lmdb/issues"
dev-repo: "git+https://github.com/Drup/ocaml-lmdb.git"
doc: "https://drup.github.io/ocaml-lmdb/dev/Lmdb.html"
tags: [ "clib:lmdb" "database" ]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.03"}
  "bigstringaf"
  "dune" {build}
  "alcotest" {with-test}
  "benchmark" {with-test}
]

depexts: [
  ["liblmdb-dev"] {os-distribution = "debian"}
  ["liblmdb-dev"] {os-distribution = "ubuntu"}
  ["lmdb"] {os = "macos" & os-distribution = "homebrew"}
  ["lmdb"] {os = "macos" & os-distribution = "macports"}
  ["lmdb-devel"] {os-distribution = "centos"}
  ["lmdb-devel"] {os-distribution = "fedora"}
  ["lmdb-devel"] {os-distribution = "opensuse"}
  ["lmdb"] {os-distribution = "alpine"}
  ["lmdb"] {os-distribution = "archlinux"}
]
