(library
 (name lmdb)
 (public_name lmdb)
 (synopsis "Bindings for LMDB, a fast in-file database with ACID transactions")
 (flags :standard -safe-string -thread)
 (libraries unix bigstringaf)
 (foreign_stubs
  (language c)
  (names lmdb_stubs)
  (flags
   :standard
   (:include %{project_root}/cflags.sexp)
   -Wall -Wextra -Wno-unused-parameter -pedantic
  )
 )
 (c_library_flags (:include "%{project_root}/clibs.sexp"))
)
