(library
 (name lmdb)
 (public_name lmdb)
 (synopsis "Bindings for LMDB, a fast in-file database with ACID transactions")
 (modules Lmdb_bindings Lmdb)
 (libraries unix bigstringaf)
 (flags :standard -safe-string)
 (c_library_flags (:include "../config/clibs.sexp"))
 (foreign_archives stubs/stubs)
)

; needs to build in subdir to avoid cyclic dependency of dynamic_include
(subdir stubs
 (dynamic_include ../../config/stubs.inc)
 (rule (copy ../lmdb_stubs.c lmdb_stubs.c))
 (rule
  (deps (source_tree ../../liblmdb))
  (action
   (concurrent
    (copy ../../liblmdb/libraries/liblmdb/mdb.c mdb.c)
    (copy ../../liblmdb/libraries/liblmdb/midl.c midl.c)
   )
  )
 )
)
