(executable
 (name simple_db)
 (modules simple_db)
 (libraries lmdb)
)

(executable
 (name bench)
 (modules bench)
 (libraries benchmark lmdb)
)

(test
 (name test)
 (modules test)
 (libraries alcotest lmdb)
 (action (run %{test} -q))
)

(alias
 (name bench)
 (deps bench.exe (universe))
 (action (run ./bench.exe))
)
