(executable
 (name simple_db)
 (modules simple_db)
 (libraries lmdb)
)

(executable
 (name bench)
 (modules bench)
 (libraries benchmark lmdb)
)

(executable
 (name test)
 (modules pr test)
 (flags :standard -thread)
 (libraries alcotest lmdb threads)
)

(rule
 (alias runtest)
 (action
  (setenv MALLOC_CHECK_ 3
    (setenv MALLOC_PERTURB_ 195
      (run %{dep:test.exe} --color=always -q)))
 )
)

(rule
 (alias bench)
 (deps :bench bench.exe)
 (action (run %{dep:bench}))
)
